--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,10 +1,9 @@
 <h2>Share:</h2>
 
 <div class="bshare-custom">
-	<a title="分享到微信" class="bshare-weixin"></a>
-	<a title="分享到QQ空间" class="bshare-qzone"></a>
-	<a title="分享到新浪微博" class="bshare-sinaminiblog"></a>
-	<a title="更多平台" class="bshare-more bshare-more-icon more-style-addthis"></a>
+	<div id= "fb-like" class="fb-like" data-href="" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 </div>
-<script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/buttonLite.js#style=-1&amp;uuid={{ site.bshare.uuid }}&amp;pophcol=1&amp;lang=zh"></script>
-<script type="text/javascript" charset="utf-8" src="http://static.bshare.cn/b/bshareC0.js"></script>
+<script type="text/javascript">
+	var url = window.location.toString();
+	$("#fb-like").attr("data-href",url);
+</script>
