--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="{{ page.keywords }}">
   {% endif %}
   <meta name="author" content="{{ site.author.name }}">
+  <link href="/static/img/pay/alipay.png" rel="image_src" type="image/png">
 
   <title>
     {% if page.title != "index" %}
