insert share img

--- a/_includes/index_head.html
+++ b/_includes/index_head.html
@@ -5,7 +5,7 @@
   <meta content="{{ site.description }}" name="description">
   <meta name="keywords" content="{{ site.keywords }}">
   <meta name="author" content="{{ site.author.name }}">
-  <link href="/static/img/pay/alipay.png" rel="image_src" type="image/png">
+  <meta property="og:image" content="/static/img/pay/alipay.png">
   <title>{{ site.title }}</title>
   <!-- favicon -->
   <link rel="shortcut icon" href="{{ "static/img/favicon.ico" | prepend: site.baseurl }}">
