insert fb share

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="{{ page.keywords }}">
   {% endif %}
   <meta name="author" content="{{ site.author.name }}">
- <meta property="og:image" content="/static/img/pay/alipay.png">
+ <meta property="og:image" content="https://chlin62.github.io/static/img/pay/alipay.png">
 
   <title>
     {% if page.title != "index" %}
