insert share img

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,8 @@
   {% endif %}
   <meta name="author" content="{{ site.author.name }}">
  <meta property="og:image" content="https://chlin62.github.io/static/img/pay/alipay.png">
+  <link href="https://chlin62.github.io/static/img/pay/alipay.png" rel="image_src" >
+ 
 
   <title>
     {% if page.title != "index" %}
