--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,12 +5,12 @@
            >
 
     <div style="position: fixed; top: 16px; right: 16px; z-index: 9999;">
-        <img src="/search/img/cb-close.png"  id="close-btn"/>
+        <img src="/info/search/img/cb-close.png"  id="close-btn"/>
     </div>
 </div>
 
 <div style="position: fixed; right: 16px; bottom: 20px; z-index: 9999;">
-    <img src="/search/img/cb-search.png"  id="search-btn"  title="Double click Ctrl"/>
+    <img src="/info/search/img/cb-search.png"  id="search-btn"  title="Double click Ctrl"/>
 </div>
 
 
